@@ -41,6 +41,9 @@ Changes since 2.3.0
 13. For the static slsh build, disable dynamic linking.
 14. src/slstdio.c:fread_bytes: A size_t vs unsigned int issue was
     causing SLmalloc to be called with an incorrect size in some cases.
+15. src/slbstr.c: Made the size of the printable representation of
+    binary strings customizable via get/set_printable_bstring_size
+    intrinsics.
 
 {{{ Previous Versions
 
